# triton-air

./: README.md  index.html  pyproject.toml
.github/workflows/: build.yml  test.yml
examples/: demo.py
scripts/: generate_trampolines.py
tests/: test_air.py  test_func.py  test_operator_overloading.py  test_runtime.py  test_smoke.py  test_trampolines.py  test_types.py  test_value_caster.py  util.py
triton_air/: __init__.py  _air_ops_gen.py  _air_transform_ops_gen.py  types.py
triton_air/dialects/: _air_ops_gen.py  air.py  air_transform.py  triton.py
triton_air/dialects/ext/: triton.py
triton_pp/: types.py  util.py
triton_pp/dialects/: _air_transform_ops_gen.py  air_transform.py  triton.py
triton_pp/dialects/ext/: triton.py
