[project]
name = "triton-air"
version = "0.0.1"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "triton-mlir",
    "numpy",
    "mlir-python-utils",
    "mlir-native-tools"
]
[project.optional-dependencies] # Optional
test = ["pytest"]
[build-system]
# https://stackoverflow.com/a/69711730
requires = ["setuptools>=64.0.0", "wheel", "black"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["triton_air"]